--- a/501_550.md
+++ b/501_550.md
@@ -2233,11 +2233,189 @@ Therefore, Option B is the most suitable solution for directing users to a backu
 
 </details>
 
+<details>
+  <summary>Question 546</summary>
 
+A recent analysis of a company's IT expenses highlights the need to reduce backup costs. The company's chief information officer wants to simplify the on-premises backup infrastructure and reduce costs by eliminating the use of physical backup tapes. The company must preserve the existing investment in the on-premises backup applications and workflows.
 
+What should a solutions architect recommend?
 
+-   [ ] A. Set up AWS Storage Gateway to connect with the backup applications using the NFS interface.
+-   [ ] B. Set up an Amazon EFS file system that connects with the backup applications using the NFS interface.
+-   [ ] C. Set up an Amazon EFS file system that connects with the backup applications using the iSCSI interface.
+-   [ ] D. Set up AWS Storage Gateway to connect with the backup applications using the iSCSI-virtual tape library (VTL) interface.
 
+</details>
 
+<details>
+  <summary>Answer</summary>
+
+-   [ ] D. Set up AWS Storage Gateway to connect with the backup applications using the iSCSI-virtual tape library (VTL) interface.
+
+Why this is the correct answer:
+
+D. Set up AWS Storage Gateway to connect with the backup applications using the iSCSI-virtual tape library (VTL) interface.
+
+-   [ ] AWS Storage Gateway's Virtual Tape Library (VTL) interface allows you to present cloud-based storage to on-premises backup applications as virtual tape libraries.
+-   [ ] This enables you to replace physical tape infrastructure with a more cost-effective and scalable cloud-based solution while preserving your existing investment in backup applications and workflows.
+-   [ ] The VTL interface integrates seamlessly with existing backup software, minimizing the need for changes to backup processes.
+
+Why are the other answers wrong?
+
+-   [ ] A. Using the NFS interface with AWS Storage Gateway is suitable for file shares, not for tape backups. It would require significant changes to the backup applications.
+-   [ ] B. Amazon EFS is a file storage service for use with EC2 instances. It is not designed to replace tape backups or integrate with existing backup applications.
+-   [ ] C. Similar to Option B, Amazon EFS with the iSCSI interface is not designed for tape backup replacement and would require significant changes to existing backup workflows.
+
+Therefore, Option D is the most appropriate solution for reducing backup costs and simplifying infrastructure while preserving existing backup applications.
+</details>
+<details>
+  <summary>Question 547</summary>
+
+A company has data collection sensors at different locations. The data collection sensors stream a high volume of data to the company. The company wants to design a platform on AWS to ingest and process high-volume streaming data. The solution must be scalable and support data collection in near real time. The company must store the data in Amazon S3 for future reporting. Which solution will meet these requirements with the LEAST operational overhead?
+
+-   [ ] A. Use Amazon Kinesis Data Firehose to deliver streaming data to Amazon S3.
+-   [ ] B. Use AWS Glue to deliver streaming data to Amazon S3.
+-   [ ] C. Use AWS Lambda to deliver streaming data and store the data to Amazon S3.
+-   [ ] D. Use AWS Database Migration Service (AWS DMS) to deliver streaming data to Amazon S3.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] A. Use Amazon Kinesis Data Firehose to deliver streaming data to Amazon S3.
+
+Why this is the correct answer:
+
+A. Use Amazon Kinesis Data Firehose to deliver streaming data to Amazon S3.
+
+-   [ ] Amazon Kinesis Data Firehose is designed to easily and reliably stream data to data lakes, data stores, and analytics services. It can capture, transform, and load streaming data into Amazon S3.
+-   [ ] Kinesis Data Firehose is fully managed, which means it automatically scales to handle high volumes of data and requires minimal operational overhead.
+-   [ ] It provides near real-time data ingestion and delivery, making it suitable for the company's requirements.
+
+Why are the other answers wrong?
+
+-   [ ] B. AWS Glue is a fully managed extract, transform, and load (ETL) service. While it can move data, it is primarily designed for batch processing and ETL jobs, not for real-time streaming ingestion.
+-   [ ] C. AWS Lambda can process streaming data, but using it to directly handle high-volume streams and deliver them to S3 would require significant custom code for scaling, buffering, and error handling, increasing operational overhead.
+-   [ ] D. AWS Database Migration Service (AWS DMS) is designed for migrating databases to AWS. It is not suitable for ingesting and processing high-volume streaming data from sensors.
+
+Therefore, Option A is the most operationally efficient solution for ingesting and processing high-volume streaming data from sensors.
+</details>
+<details>
+  <summary>Question 548</summary>
+
+A company has separate AWS accounts for its finance, data analytics, and development departments. Because of costs and security concerns, the company wants to control which services each AWS account can use. Which solution will meet these requirements with the LEAST operational overhead?
+
+-   [ ] A. Use AWS Systems Manager templates to control which AWS services each department can use.
+-   [ ] B. Create organization units (OUs) for each department in AWS Organizations. Attach service control policies (SCPs) to the OUs.
+-   [ ] C. Use AWS CloudFormation to automatically provision only the AWS services that each department can use.
+-   [ ] D. Set up a list of products in AWS Service Catalog in the AWS accounts to manage and control the usage of specific AWS services.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] B. Create organization units (OUs) for each department in AWS Organizations. Attach service control policies (SCPs) to the OUs.
+
+Why this is the correct answer:
+
+B. Create organization units (OUs) for each department in AWS Organizations. Attach service control policies (SCPs) to the OUs.
+
+-   [ ] AWS Organizations allows you to centrally manage multiple AWS accounts.
+-   [ ] Organization units (OUs) enable you to group accounts hierarchically.
+-   [ ] Service control policies (SCPs) allow you to define AWS service permissions at the OU or organization level, providing centralized control over which services each account can use.
+-   [ ] This approach minimizes operational overhead by enforcing controls at a higher level, rather than managing them individually in each account.
+
+Why are the other answers wrong?
+
+-   [ ] A. AWS Systems Manager is designed for managing EC2 instances and other AWS resources, not for controlling which AWS services accounts can use.
+-   [ ] C. AWS CloudFormation is an infrastructure-as-code service for provisioning AWS resources. While it can control what is provisioned, it does not provide ongoing control over which services an account can use.
+-   [ ] D. AWS Service Catalog allows you to create and manage catalogs of approved AWS services. It helps in standardizing resource usage but does not provide the same level of preventive control as SCPs.
+
+Therefore, Option B is the most operationally efficient solution for controlling which AWS services each department can use.
+
+</details>
+
+<details>
+  <summary>Question 549</summary>
+
+A company has created a multi-tier application for its ecommerce website. The website uses an Application Load Balancer that resides in the public subnets, a web tier in the public subnets, and a MySQL cluster hosted on Amazon EC2 instances in the private subnets. The MySQL database needs to retrieve product catalog and pricing information that is hosted on the internet by a third-party provider. A solutions architect must devise a strategy that maximizes security without increasing operational overhead.
+
+What should the solutions architect do to meet these requirements?
+
+-   [ ] A. Deploy a NAT instance in the VPC. Route all the internet-based traffic through the NAT instance.
+-   [ ] B. Deploy a NAT gateway in the public subnets. Modify the private subnet route table to direct all internet-bound traffic to the NAT gateway.
+-   [ ] C. Configure an internet gateway and attach it to the VPModify the private subnet route table to direct internet-bound traffic to the internet gateway.
+-   [ ] D. Configure a virtual private gateway and attach it to the VPC. Modify the private subnet route table to direct internet-bound traffic to the virtual private gateway.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] B. Deploy a NAT gateway in the public subnets. Modify the private subnet route table to direct all internet-bound traffic to the NAT gateway.
+
+Why this is the correct answer:
+
+B. Deploy a NAT gateway in the public subnets. Modify the private subnet route table to direct all internet-bound traffic to the NAT gateway.
+
+-   [ ] NAT gateways allow instances in private subnets to connect to the internet while preventing the internet from initiating connections with those instances. This enhances security.
+-   [ ] By placing the NAT gateway in the public subnet and routing traffic from the private subnets through it, the MySQL instances can retrieve information from the third-party provider without being directly exposed to the internet.
+-   [ ] NAT gateways are managed by AWS, reducing operational overhead compared to managing NAT instances.
+
+Why are the other answers wrong?
+
+-   [ ] A. NAT instances perform a similar function to NAT gateways, but they require more management, such as scaling and patching, which increases operational overhead.
+-   [ ] C. An internet gateway allows direct communication between the VPC and the internet. This would expose the MySQL instances in the private subnet directly to the internet, which is a security risk.
+-   [ ] D. A virtual private gateway is used to create a VPN connection between your VPC and an on-premises network. It is not used for enabling internet access for instances in private subnets.
+
+Therefore, Option B provides the most secure and operationally efficient solution for allowing the MySQL instances to access the third-party provider.
+
+</details>
+
+<details>
+  <summary>Question 550</summary>
+
+A company is using AWS Key Management Service (AWS KMS) keys to encrypt AWS Lambda environment variables. A solutions architect needs to ensure that the required permissions are in place to decrypt and use the environment variables. Which steps must the solutions architect take to implement the correct permissions? (Choose two.)
+
+-   [ ] A. Add AWS KMS permissions in the Lambda resource policy.
+-   [ ] B. Add AWS KMS permissions in the Lambda execution role.
+-   [ ] C. Add AWS KMS permissions in the Lambda function policy.
+-   [ ] D. Allow the Lambda execution role in the AWS KMS key policy.
+-   [ ] E. Allow the Lambda resource policy in the AWS KMS key policy.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] B. Add AWS KMS permissions in the Lambda execution role.
+-   [ ] D. Allow the Lambda execution role in the AWS KMS key policy.
+
+Why these are the correct answers:
+
+B. Add AWS KMS permissions in the Lambda execution role.
+
+-   [ ] The Lambda execution role is an IAM role that grants the Lambda function permissions to access AWS services.
+-   [ ] To allow the Lambda function to decrypt environment variables encrypted with KMS, you must add KMS permissions to this role.
+-   [ ] This typically involves granting the `kms:Decrypt` permission.
+
+D. Allow the Lambda execution role in the AWS KMS key policy.
+
+-   [ ] The KMS key policy controls who can use the KMS key.
+-   [ ] To allow the Lambda function to use the KMS key for decryption, you must allow the Lambda execution role in the KMS key policy.
+-   [ ] This is done by adding a statement to the key policy that grants the execution role the necessary permissions.
+
+Why are the other answers wrong?
+
+-   [ ] A. Lambda resource policies are used to grant other AWS accounts or services permission to invoke the Lambda function. They are not used to grant the Lambda function permissions to access other AWS services.
+-   [ ] C. Lambda function policies are the same as Lambda resource policies. They do not grant the Lambda function permissions to access other AWS services.
+-   [ ] E. The Lambda resource policy does not need to be allowed in the KMS key policy. The execution role is what needs permission to use the KMS key.
+
+Therefore, Options B and D are the correct steps to ensure the Lambda function has the necessary permissions to decrypt environment variables encrypted with KMS.
+
+</details>
 
 
 
