--- a/551_600.md
+++ b/551_600.md
@@ -1599,11 +1599,82 @@ Why are the other answers wrong?
 Therefore, Options A, C, and F provide the most cost-effective solution for storing the data from on-premises devices and querying it with SQL.
 </details>
 
+<details>
+  <summary>Question 599</summary>
 
+A company wants to use Amazon Elastic Container Service (Amazon ECS) clusters and Amazon RDS DB instances to build and run a payment processing application. The company will run the application in its on-premises data center for compliance purposes. A solutions architect wants to use AWS Outposts as part of the solution. The solutions architect is working with the company's operational team to build the application. Which activities are the responsibility of the company's operational team? (Choose three.)
 
+-   [ ] A. Providing resilient power and network connectivity to the Outposts racks
+-   [ ] B. Managing the virtualization hypervisor, storage systems, and the AWS services that run on Outposts
+-   [ ] C. Physical security and access controls of the data center environment
+-   [ ] D. Availability of the Outposts infrastructure including the power supplies, servers, and networking equipment within the Outposts racks
+-   [ ] E. Physical maintenance of Outposts components
+-   [ ] F. Providing extra capacity for Amazon ECS clusters to mitigate server failures and maintenance events
 
+</details>
 
+<details>
+  <summary>Answer</summary>
 
+-   [ ] A. Providing resilient power and network connectivity to the Outposts racks
+-   [ ] C. Physical security and access controls of the data center environment
+-   [ ] F. Providing extra capacity for Amazon ECS clusters to mitigate server failures and maintenance events
+
+Why these are the correct answers:
+
+A. Providing resilient power and network connectivity to the Outposts racks
+
+-   [ ]   Since AWS Outposts is an extension of AWS infrastructure into the customer's data center, the customer is responsible for providing the necessary power and network connectivity to ensure the Outposts racks can operate.
+
+C. Physical security and access controls of the data center environment
+
+-   [ ]   The customer retains responsibility for the physical security of their data center environment, including access controls to the facility where the Outposts racks are located.
+
+F. Providing extra capacity for Amazon ECS clusters to mitigate server failures and maintenance events
+
+-   [ ]   The customer is responsible for ensuring that their ECS clusters have sufficient capacity to handle workloads and mitigate failures or maintenance events. This is part of application management.
+
+Why are the other answers wrong?
+
+-   [ ]   B, D, and E. AWS is responsible for managing the virtualization hypervisor, storage systems, and AWS services on Outposts, as well as the availability and maintenance of the Outposts infrastructure itself.
+
+Therefore, Options A, C, and F are the responsibilities of the company's operational team.
+
+</details>
+
+<details>
+  <summary>Question 600</summary>
+
+A company is planning to migrate a TCP-based application into the company's VPC. The application is publicly accessible on a nonstandard TCP port through a hardware appliance in the company's data center. This public endpoint can process up to 3 million requests per second with low latency. The company requires the same level of performance for the new public endpoint in AWS. What should a solutions architect recommend to meet this requirement?
+
+-   [ ] A. Deploy a Network Load Balancer (NLB). Configure the NLB to be publicly accessible over the TCP port that the application requires.
+-   [ ] B. Deploy an Application Load Balancer (ALB). Configure the ALB to be publicly accessible over the TCP port that the application requires.
+-   [ ] C. Deploy an Amazon CloudFront distribution that listens on the TCP port that the application requires. Use an Application Load Balancer as the origin.
+-   [ ] D. Deploy an Amazon API Gateway API that is configured with the TCP port that the application requires. Configure AWS Lambda functions with provisioned concurrency to process the requests.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] A. Deploy a Network Load Balancer (NLB). Configure the NLB to be publicly accessible over the TCP port that the application requires.
+
+Why this is the correct answer:
+
+A. Deploy a Network Load Balancer (NLB). Configure the NLB to be publicly accessible over the TCP port that the application requires.
+
+-   [ ]   Network Load Balancers (NLBs) are designed for high-performance, low-latency traffic and can handle millions of requests per second.
+-   [ ]   NLBs operate at the transport layer (TCP/UDP), making them suitable for TCP-based applications requiring high throughput.
+-   [ ]   NLBs support nonstandard ports, allowing the application to use its existing port.
+
+Why are the other answers wrong?
+
+-   [ ]   B. Application Load Balancers (ALBs) are designed for HTTP and HTTPS traffic and are not optimized for the same level of throughput as NLBs.
+-   [ ]   C. Amazon CloudFront is a content delivery network (CDN) and is not designed to handle direct TCP traffic at very high rates.
+-   [ ]   D. Amazon API Gateway and Lambda are not designed for handling such high-volume, low-latency TCP traffic. They are better suited for API-driven workloads.
+
+Therefore, Option A is the most appropriate solution to meet the performance requirements of the TCP-based application.
+</details>
 
 
 
