--- a/051_100.md
+++ b/051_100.md
@@ -1,4 +1,4 @@
-AWS-SAA-PRACTICE-EXAM Questions 51-100
+# AWS-SAA-PRACTICE-EXAM Questions 51 - 60 
 
 <details>
   <summary>Question 51</summary>
@@ -354,6 +354,8 @@ Server Name Indication (SNI) is a TLS extension that allows a server to present 
 
 </details>
 
+# AWS-SAA-PRACTICE-EXAM Questions 61 - 70 
+
 <details>
   <summary>Question 61</summary>
 
@@ -695,6 +697,8 @@ Why this is the correct answer:
 - [ ] Option D is wrong because: If the NLB's health checks are not correctly identifying the instances as unhealthy when they are returning HTTP errors (as stated in the problem: "NLB is not detecting HTTP errors"), then the UnhealthyHostCount metric for the NLB will not be accurate. An alarm based on this potentially inaccurate metric would not reliably trigger the Auto Scaling action to replace the genuinely unhealthy instances. The root cause of the health check inadequacy needs to be addressed first.
 
 </details>
+
+# AWS-SAA-PRACTICE-EXAM Questions 71 - 80 
 
 <details>
   <summary>Question 71</summary>
@@ -1065,6 +1069,8 @@ This solution follows the principle of least privilege and uses AWS-recommended 
 
 </details>
 
+# AWS-SAA-PRACTICE-EXAM Questions 81 - 90 
+
 <details>
   <summary>Question 81</summary>
 
@@ -1412,6 +1418,8 @@ Why this is the correct answer:
 - [ ] Option D is wrong because: Amazon ElastiCache is an in-memory caching service. While it can reduce database load by caching frequently accessed query results, the script is querying for "new movies added." Such queries, which seek new or changing data, are often not good candidates for caching, as the cache would frequently be stale or miss the latest additions. A read replica directly offloads the entire query load, regardless of whether the results are cacheable.
 
 </details>
+
+# AWS-SAA-PRACTICE-EXAM Questions 91 - 100 
 
 <details>
   <summary>Question 91</summary>
